--- a/index.html
+++ b/index.html
@@ -3,16 +3,129 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/styles.css" />
     <title>CallMeNow!</title>
   </head>
   <body>
     <div class="samsung">
       <div class="screen">
-        <img
-          src="https://1.bp.blogspot.com/-_9qGGyE8pHo/YLDSzalKr-I/AAAAAAAAFFw/soxjTWEbVushTke75UUfcbbiXm-UK7HdACLcBGAsYHQ/s0/1.jpg"
-        />
+        <div class="interface">
+          <div class="row d-none" id="phone-page">
+            <div class="col phone">
+              <div class="row">
+                <div class="col">
+                  <input
+                    type="tel"
+                    name="name"
+                    id="telNumber"
+                    class="form-control tel"
+                    value=""
+                  />
+                  <div class="num-pad">
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">1</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">2</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">3</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">4</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">5</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">6</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">7</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">8</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">9</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">*</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">0</div>
+                      </div>
+                    </div>
+                    <div class="span4">
+                      <div class="num">
+                        <div class="txt">#</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="clearfix"></div>
+                  <div class="d-flex align-items-center justify-content-center">
+                    <a class="btn btn-success btn-block flatbtn" id="call"
+                      >CALL</a
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+          </div>
+
+          <div
+            class="d-flex align-items-end justify-content-center w-100 h-100"
+            id="homepage"
+          >
+            <nav
+              class="d-flex align-items-center justify-content-evenly mb-2 gap-4"
+            >
+              <button class="bg-transparent" id="phone-btn">
+                <img src="./assets/imgs/Phone(1).png" alt="" />
+              </button>
+              <button class="bg-transparent">
+                <img src="./assets/imgs/Mail.png" alt="" />
+              </button>
+              <button class="bg-transparent">
+                <img src="./assets/imgs/Photos.png" alt="" />
+              </button>
+              <button class="bg-transparent">
+                <img src="./assets/imgs/Camera.png" alt="" />
+              </button>
+            </nav>
+          </div>
+        </div>
       </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
